converter/test/k8scvt/testdata/ingress-issues.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: hello-world-deployment
spec:
 replicas: 1
 template:
   metadata:
     labels:
       app: hello-world
   spec:
     containers:
       - image: gokul93/hello-world:latest
         imagePullPolicy: Always
         name: hello-world-container
         ports:
           - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
 name: hello-world-svc
spec:
 ports:
   - port: 8080
     protocol: TCP
     targetPort: 8080
 selector:
   app: hello-world
 type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
 name: default-http-backend
spec:
 replicas: 1
 template:
   metadata:
     labels:
       app: default-http-backend
   spec:
     containers:
       - name: default-http-backend
         image: gcr.io/google_containers/defaultbackend:1.0
         livenessProbe:
           httpGet:
             path: /healthz
             port: 8080
             scheme: HTTP
           initialDelaySeconds: 30
           timeoutSeconds: 5
         ports:
           - containerPort: 8080
         resources:
           limits:
             cpu: 10m
             memory: 20Mi
           requests:
             cpu: 10m
             memory: 20Mi
---
kind: Service
apiVersion: v1
metadata:
 name: default-http-backend
spec:
 selector:
   app: default-http-backend
 ports:
   - protocol: TCP
     port: 80
     targetPort: 8080
 type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
 name: nginx-ingress-controller
spec:
 replicas: 1
 revisionHistoryLimit: 3
 template:
   metadata:
     labels:
       k8s-app: nginx-ingress-lb
   spec:
     containers:
       - args:
           - /nginx-ingress-controller
           - --default-backend-service=$(POD_NAMESPACE)/default-http-backend
           - --default-ssl-certificate=$(POD_NAMESPACE)/tls-certificate
         image: gcr.io/google_containers/nginx-ingress-controller:0.9.0-beta.5
         imagePullPolicy: Always
         livenessProbe:
           httpGet:
             path: /healthz
             port: 10254
             scheme: HTTP
           initialDelaySeconds: 10
           timeoutSeconds: 5
         name: nginx-ingress-controller
         ports:
           - containerPort: 80
             name: http
             protocol: TCP
           - containerPort: 443
             name: https
             protocol: TCP
         volumeMounts:
           - mountPath: /etc/nginx-ssl/dhparam
             name: tls-dhparam-vol
     volumes:
       - name: tls-dhparam-vol
         secret:
           secretName: tls-dhparam
---
apiVersion: v1
kind: Service
metadata:
 name: nginx-ingress
spec:
 type: LoadBalancer
 ports:
   - name: http
     port: 80
     targetPort: http
   - name: https
     port: 443
     targetPort: https
 selector:
   k8s-app: nginx-ingress-lb
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: hello-world-ingress
 annotations:
   kubernetes.io/ingress.class: nginx
   nginx.org/ssl-services: hello-world-svc
spec:
 tls:
   - hosts:
       - api.sample.com
     secretName: tls-certificate
 rules:
   - host: api.sample.com
     http:
       paths:
         - path: /
           backend:
             serviceName: hello-world-svc
             servicePort: 8080
